feat: add section intro

--- a/styles/global.css
+++ b/styles/global.css
@@ -21,12 +21,29 @@
   --font-family-inconsolata: "Inconsolata", sans-serif;
   --font-family-Maven-Pro: "Maven Pro", sans-serif;
 
-  --title-lg: 800 56px/120% var(--font-family-asap);
-  --title-md: 800 24px/120% var(--font-family-asap);
-  --title-sm: 800 16px/120% var(--font-family-asap);
+  --title-lg: 800 3.5rem/120% var(--font-family-asap);
+  --title-md: 800 1.5rem/120% var(--font-family-asap);
+  --title-sm: 800 1rem/120% var(--font-family-asap);
 
-  --subtitle: 600 20px/120% var(--font-family-inconsolata);
+  --subtitle: 600 1.25rem/120% var(--font-family-inconsolata);
 
-  --text-md: 400 16px/140% var(--font-family-Maven-Pro);
-  --text-sm: 400 14px/140% var(--font-family-Maven-Pro);
+  --text-md: 400 1rem/140% var(--font-family-Maven-Pro);
+  --text-sm: 400 0.875/140% var(--font-family-Maven-Pro);
+}
+
+body {
+  color: var(--base-gray-600);
+  background-color: var(--base-gray-200);
+}
+
+h1{
+  font: var(--title-lg);
+}
+
+h3 {
+  font: var(--subtitle);
+}
+
+p{
+  font: var(--text-sm);
 }
