--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,8 +1,9 @@
-.intro {
+.containerIntro {
   height: auto;
   max-width: 1366px;
 
-  margin-top: 7.5rem;
+  padding-top: 7.5rem;
+  margin-bottom: 3.4rem;
 
   background-image: url(../assets/Background_Intro.png);
   background-repeat: no-repeat;
@@ -10,99 +11,190 @@
 
   flex-direction: column;
   align-items: center;
-  gap: 94px;
-}
-
-.info {
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 80px;
+  gap: 94px;
 
-  padding-inline: 180px;
+  & .boxInfo {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
 
-  & header {
-    max-width: 680px;
+    padding-inline: 180px;
 
-    & .avatar {
-      position: relative;
+    & header {
+      max-width: 680px;
 
-      margin: 8px;
+      & .avatar {
+        position: relative;
 
-      padding-bottom: 56px;
-      justify-content: center;
-      align-items: center;
+        margin: 8px;
 
-      #code-icon {
-        position: absolute;
-        top: 45%;
-        left: 52.5%;
-        max-width: 32px;
-      }
-
-      & .circle {
+        padding-bottom: 56px;
         justify-content: center;
         align-items: center;
-        width: 96px;
-        height: 96px;
-        border-radius: 50%;
-        border: 2px solid var(--principal-red);
 
-        img {
-          width: 87.27px;
+        #code-icon {
+          position: absolute;
+          top: 45%;
+          left: 52.5%;
+          max-width: 32px;
+        }
+
+        & .circle {
+          justify-content: center;
+          align-items: center;
+          width: 96px;
+          height: 96px;
           border-radius: 50%;
-          object-fit: cover;
-          aspect-ratio: 1/1;
+          border: 2px solid var(--principal-red);
+
+          img {
+            width: 87.27px;
+            border-radius: 50%;
+            object-fit: cover;
+            aspect-ratio: 1/1;
+          }
+        }
+      }
+
+      & .description {
+        flex-direction: column;
+        align-items: center;
+
+        & h3 {
+          color: var(--base-gray-500);
+
+          & span {
+            color: var(--principal-red);
+          }
+        }
+
+        & h1 {
+          color: var(--base-gray-600);
+        }
+
+        & p {
+          margin-top: 1.25rem;
+          color: var(--base-gray-400);
         }
       }
     }
 
-    & .description {
-      flex-direction: column;
+    & .tags {
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
+      gap: 16px;
 
-      & h3 {
+      & .cardTag {
+        height: 2.4rem;
+        width: 7rem;
+
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        font: var(--text-md);
         color: var(--base-gray-500);
+        background-color: var(--base-gray-300);
+        border-radius: 1rem;
+      }
+    }
+  }
 
-        & span {
-          color: var(--principal-red);
-        }
+  & .intro img {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
+.containerProjects,
+.containerServices {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 56px;
+
+  & header {
+    text-align: center;
+
+    & h3 {
+      margin-bottom: 8px;
+      color: var(--principal-red);
+    }
+  }
+}
+
+.containerProjects {
+  padding: 72px 163px 144px;
+
+  & .boxProjects {
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+    gap: 1.25rem;
+
+    & .cardProject {
+      padding: 12px;
+      background-color: var(--base-gray-300);
+      border-radius: 0.75rem;
+
+      & img {
+        width: 100%;
+        border-radius: 0.5rem;
       }
 
-      & h1 {
-        color: var(--base-gray-600);
+      & div {
+        padding: 4px;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      & h3 {
+        margin-top: 20px;
+        font: var(--title-sm);
       }
 
       & p {
-        margin-top: 1.25rem;
-        color: var(--base-gray-400);
+        font: var(--text-sm);
+        color: var(--base-gray-500);
       }
-    }
-  }
-
-  & .tags {
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-
-    & .cardTag {
-      height: 2.4rem;
-      width: 7rem;
-
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-
-      font: var(--text-md);
-      color: var(--base-gray-500);
-      background-color: var(--base-gray-300);
-      border-radius: 1rem;
     }
   }
 }
 
-.intro > img {
-  width: 2rem;
-  height: 2rem;
+.containerServices {
+  padding: 88px 240px 120px;
+  background-color: var(--base-gray-100);
+
+  & .boxServices {
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    gap: 24px;
+
+    & .cardService {
+      padding: 20px;
+      border: 2px solid var(--base-gray-200);
+      border-radius: 0.75rem;
+
+      & img {
+        height: 48px;
+        width: 48px;
+      }
+
+      & div {
+        margin-top: 20px;
+        flex-direction: column;
+        gap: 8px;
+
+        & h3 {
+          font: var(--title-sm);
+        }
+
+        & p {
+          color: var(--base-gray-500);
+        }
+      }
+    }
+  }
 }
