--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,6 +1,5 @@
 .containerIntro {
   height: auto;
-  max-width: 1366px;
 
   padding-top: 7.5rem;
   margin-bottom: 3.4rem;
@@ -110,7 +109,8 @@
 }
 
 .containerProjects,
-.containerServices {
+.containerServices,
+.containerContacts {
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -135,9 +135,14 @@
     gap: 1.25rem;
 
     & .cardProject {
-      padding: 12px;
+      padding: 13px;
       background-color: var(--base-gray-300);
       border-radius: 0.75rem;
+
+      &:hover {
+        padding: 12px;
+        border: solid 1px var(--base-gray-400);
+      }
 
       & img {
         width: 100%;
@@ -193,6 +198,87 @@
 
         & p {
           color: var(--base-gray-500);
+        }
+      }
+    }
+  }
+}
+
+.containerContacts {
+  padding: 128px 120px 200px;
+
+  background-image: url(../assets/Background_Contacts.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+
+  & header {
+    & h3 {
+      color: var(--principal-purple);
+    }
+
+    & h2,
+    p {
+      margin-top: 8px;
+    }
+
+    & p {
+      color: var(--base-gray-500);
+    }
+  }
+
+  & .boxLinks {
+    width: 100%;
+    max-width: 400px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+
+    & .cardLink {
+      width: 100%;
+      padding: 21px;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      
+      border-radius: 0.5rem;
+      background-color: var(--base-gray-300);
+
+      & span {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+
+        & img {
+          width: 28px;
+          height: 28px;
+        }
+
+        & p {
+          color: var(--color-gray-500);
+        }
+      }
+
+      & img {
+        width: 20px;
+        height: 20px;
+      }
+
+      &:hover {
+        padding: 20px;
+        border: 1px solid var(--principal-blue);
+        img {
+          filter: invert(58%) sepia(94%) saturate(2457%) hue-rotate(180deg)
+            brightness(92%) contrast(86%);
         }
       }
     }
