refactor: add limits  width in box project and box services

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -131,6 +131,7 @@
 
   & .boxProjects {
     width: 100%;
+    max-width: 1040px;
     grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
     gap: 1.25rem;
 
@@ -174,6 +175,7 @@
 
   & .boxServices {
     width: 100%;
+    max-width: 888px;
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     gap: 24px;
 
@@ -249,7 +251,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      
+
       border-radius: 0.5rem;
       background-color: var(--base-gray-300);
 
